[package]
name = "stp_certificates"
version = "0.1.0-alpha.0"
edition = "2024"

[dependencies]
ed25519-dalek = "2.2.0"
once_cell = "1.21.3"
pem = "3.0.6"
pqcrypto-falcon = "0.4.1"
pqcrypto-mldsa = "0.1.2"
pqcrypto-sphincsplus = "0.7.2"
pqcrypto-traits = "0.3.5"
rand = "0.9"
sha3 = "0.10.8"
thiserror = "2.0.17"
yasna = "0.5.2"
zeroize = "1.8.2"
