[package]
name = "stp_certificates"
version = "0.1.0-alpha.0"
edition = "2024"

[dependencies]
# Базовые вещи
thiserror = "2.0.17"
yasna = "0.5.2"
zeroize = "1.8.2"
once_cell = "1.21.3"
pem = "3.0.6"
rand = "0.9"
ed25519-dalek = "2.2.0"
sha3 = "0.10.8"

# Криптография (делаем опциональной)
pqcrypto-falcon = { version = "0.4.1", optional = true }
pqcrypto-mldsa = { version = "0.1.2", optional = true }
pqcrypto-sphincsplus = { version = "0.7.2", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }

[features]
pqcrypto = ["dep:pqcrypto-falcon", "dep:pqcrypto-mldsa", "dep:pqcrypto-sphincsplus", "dep:pqcrypto-traits"]
CRL = []
OCSP = []
full = ["pqcrypto", "CRL", "OCSP"]

default = ["full"]